testsuite/poke.pkl/lt-any-diag-1.pk
/* { dg-do compile } */

fun lt_any = (any a, any b) int<32>:
{
  return a < b; /* { dg-error "invalid operand.*\n.*got any" } */
}
